--- a/TdsClient/TdsClient.csproj
+++ b/TdsClient/TdsClient.csproj
@@ -31,4 +31,19 @@
     <Folder Include="TDS\Processes\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="System2\Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="System2\Strings.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
